<resources>
    <string name="app_name">My Workshops</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Workshops</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_browse_workShops">Browse Workshops</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="name">Name :</string>
    <string name="name_hint">e.g:- abc</string>
    <string name="email_id">Email id :</string>
    <string name="email_id_hint">e.g:- abc@domain.com</string>
    <string name="password">Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="password_hint_place">******</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="apply_button">Apply</string>
    <string name="shared_preference_name">com.example.myworkshops.PREFERENCE_FILE_KEY</string>
    <string name="login_state_key">USER_LOGIN_STATE</string>
</resources>
