<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_login"
            android:title="@string/log_in" />

        <item
            android:id="@+id/nav_sign_up"
            android:icon="@drawable/ic_signup"
            android:title="@string/sign_up" />

        <item
            android:id="@+id/nav_browse_workshops"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_browse_workShops" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />

    </group>

</menu>
