<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_browse_workshops">

    <fragment
        android:id="@+id/nav_browse_workshops"
        android:name="com.example.myworkshops.fragments.BrowseWorkshopsFragment"
        android:label="@string/menu_browse_workShops"
        tools:layout="@layout/fragment_browse_workshops" />
    <fragment
        android:id="@+id/nav_log_in"
        android:name="com.example.myworkshops.fragments.LogInFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_log_in" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.myworkshops.fragments.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.example.myworkshops.fragments.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" />
</navigation>